# todoist_interface

./: .coveragec  .coveragerc  .envrc  .flake8  .gitignore  README.md  flake.nix  pyproject.toml  setup.py  test_apis.py  todoist_interface.bat  todoist_interface.vbs  todoist_interface.yml.example
requirements/: development.txt
tests/: conftest.py  mocks.py  test_gitlab.py  test_mantishub.py  test_settings.py  test_todoist.py  test_utils.py
todoist_interface/: __main__.py  gitlab.py  mantishub.py  settings.py  todoist.py  utils.py
