[tool.poetry]
name = "todoist-interface"
version = "0.1.0"
description = ""
authors = ["Andreas Zweili <andreas@zweili.ch>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include="todoist_interface" }
]

[tool.pylint]
max-line-length = 88
[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.mypy]
exclude = [
    "tests/",
]
mypy_path = "./todoist_interface"
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pyinstaller = "^6.8.0"
python-lsp-server = "^1.11.0"
pylint = "^3.2.3"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
